fix: 충돌 해결 및 개행 추가